kanz/infra/controllers/cloudnative-pg/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnpg-controller-manager
  namespace: cnpg-system
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: manager
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 250m
              memory: 256Mi
